Send an email when someone submit a comment. Add option to disable sending email.

--- a/samples/cblog.conf
+++ b/samples/cblog.conf
@@ -11,3 +11,6 @@ feed.nb_posts=10
 feed.rss=rss.cs
 feed.atom=atom.cs
 antispamres=fuck spam
+email.enable=0
+email.from=toto@example.tld
+email.to=me@example.tld
