cblog.cgi: make install

--- a/cgi/Makefile
+++ b/cgi/Makefile
@@ -3,10 +3,20 @@
 PROG=	cblog.cgi
 SRCS+=	main.c cblog_cgi.c cblog_comments.c
 PREFIX?=	/usr/local
+DESTDIR= ${PREFIX}
+BINDIR= /libexec/cgi-bin/
+MANDIR= /man/man
 DEFINE=-DETCDIR=\"${PREFIX}/etc\"
 INCLUDE=-I${PREFIX}/include -I${PREFIX}/include/ClearSilver -I. -I../lib
 CDB_PATH?=	/usr/local/cblog
 CFLAGS+=	-Wall -ggdb -O0 ${INCLUDE} ${DEFINE} -DCDB_PATH=\"${CDB_PATH}\" -Werror
 LDADD+=	-L${PREFIX}/lib -lz -lneo_cgi -lneo_cs -lneo_utl -lfcgi -lcdb -L../lib -lcblog_utils
+
+#if exists(cblogctl)
+CDB_PATH!= cblogctl p
+#endif
+
+beforeinstall:
+	@mkdir -p ${DESTDIR}${BINDIR}
 
 .include <bsd.prog.mk>
