cblog: make install

--- a/cgi/Makefile
+++ b/cgi/Makefile
@@ -17,6 +17,11 @@ CDB_PATH!= cblogctl p
 #endif
 
 beforeinstall:
+	@mkdir -p ${PREFIX}/etc ${PREFIX}/etc/rc.d
+	@cp ../samples/cblog.conf ${PREFIX}/etc/
+	@mkdir -p ${DESTDIR}/share/cblog
+	@cp -r ../samples/templates ${DESTDIR}/share/cblog
+	@sed -e 's,_APP_,${DESTDIR}${BINDIR}${PROG},' ../samples/spawn_cblog > ${PREFIX}/etc/rc.d/spawn_cblog
 	@mkdir -p ${DESTDIR}${BINDIR}
 
 .include <bsd.prog.mk>
