--- a/samples/cblog.conf
+++ b/samples/cblog.conf
@@ -1,10 +1,8 @@
 title=Bapt
 url=http://www.etoilebsd.net/cblog.ccgi
 dateformat=%d/%m/%Y
-hdf.loadpaths.tpl=/usr/local/cblog/templates
+hdf.loadpaths.tpl=/usr/local/share/cblog/templates
 cgiout.charset=utf-8
-data.dir=/usr/local/cblog/data
-cache.dir=/usr/local/cblog/cache
 theme=default.cs
 posts_per_pages=10
 feed.nb_posts=10
@@ -12,5 +10,5 @@ feed.rss=rss.cs
 feed.atom=atom.cs
 antispamres=fuck spam
 email.enable=0
-email.from=toto@example.tld
-email.to=me@example.tld
+email.from=foo@example.tld
+email.to=bar@example.tld
