correct syntax is db_path=/path/to/cblog.cdb

--- a/samples/cblog.conf
+++ b/samples/cblog.conf
@@ -12,4 +12,4 @@ antispamres=fuck spam
 email.enable=0
 email.from=foo@example.tld
 email.to=bar@example.tld
-db_path=_CDB_PATH_
+db_path=_CDB_PATH_/cblog.cdb
