Update sample config for templates/interface/port

--- a/samples/cblog.conf
+++ b/samples/cblog.conf
@@ -1,7 +1,9 @@
 title=Bapt
 url=http://www.etoilebsd.net/cblog.ccgi
 dateformat=%d/%m/%Y
-hdf.loadpaths.tpl=/usr/local/share/cblog/templates
+templates=/usr/local/share/cblog/templates
+interface=127.0.0.1
+port=8080
 cgiout.charset=utf-8
 theme=default.cs
 posts_per_pages=10
