Update default sample cblog.conf

--- a/samples/cblog.conf
+++ b/samples/cblog.conf
@@ -1,10 +1,10 @@
 title=Bapt
+author=Bapt
 url=http://www.etoilebsd.net/cblog.ccgi
 dateformat=%d/%m/%Y
 templates=/usr/local/share/cblog/templates
 interface=127.0.0.1
 port=8080
-cgiout.charset=utf-8
 theme=default.cs
 posts_per_pages=10
 feed.nb_posts=10
